[project]
name = "rss-translator-proxy"
version = "0.1.0"
description = "Proxy which translates RSS feeds"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "deepl>=1.22.0",
    "diskcache>=5.6.3",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
]
